# redrob-ranker

./: .gitignore  Dockerfile  README.md  app.py  final_submission.csv  pyproject.toml  rank.py  requirements-demo.txt  requirements.txt  spaces_README.md  start.sh  submission_metadata.yaml
.streamlit/: config.toml
api/: __init__.py  server.py
components/: cards.py  hero.py  leaderboard.py  sidebar.py  upload.py
components_old/: cards.py  hero.py  kpi_cards.py  sidebar.py  upload.py
data/: test_upload.csv
pages_old/: dashboard.py
src/: __init__.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  types.py
src/embeddings/: __init__.py
src/evaluation/: __init__.py  metrics.py
src/features/: advanced_skill_matcher.py  behavioral_features.py  career_description_analyzer.py  career_features.py  education_features.py  experience_features.py  feature_registry.py  location_features.py  mutual_interest_scorer.py  skill_canonicalizer.py  skills_features.py
src/pipelines/: offline_pipeline.py  online_ranker.py
src/ranking/: __init__.py
src/reasoning/: __init__.py  explanation_engine.py
src/retrieval/: __init__.py  bm25_retriever.py  dense_retriever.py  fusion.py
src/utils/: text_processing.py
src/validators/: __init__.py  honeypot_detector.py
styles/: style.css
styles_old/: style.css
utils/: api_client.py  decisions.py
views/: analytics.py  api_docs.py  candidates.py  compare.py  dashboard.py  explainability.py  export.py  fraud.py  leaderboard.py  settings.py  upload.py
