[project]
name = "redrob-ranker"
version = "1.0.0"
description = "Intelligent Candidate Discovery & Ranking System for Redrob Hackathon"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "rank-bm25>=0.2.2",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
full = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
